# corpus-callosum

./: .gitignore  LICENSE  README.md  pyproject.toml
src/corpus_callosum/: __init__.py  cli.py
src/corpus_callosum/plotting/: __init__.py  colormaps.py  palette.py  style.py
src/corpus_callosum/plotting/_styles/: callosum.mplstyle
tests/: test_cli.py
